--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400&family=Fredoka+One&family=Questrial&family=Staatliches&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script defer src="https://kit.fontawesome.com/e918d10e90.js" crossorigin="anonymous"></script>
-    <script defer src="public/helpers.js"></script>
-    <script defer src="public/script.js"></script>
+    <script type="module" defer src="helpers.js"></script>
+    <script type="module" defer src="script.js"></script>
   </head>
   <body>
     <header>
@@ -29,5 +29,7 @@
       <button id="likeBtn"><i class="fa-solid fa-thumbs-up"></i></button>
       <button id="dislikeBtn"><i class="fa-solid fa-thumbs-down"></i></button>
     </div>
+    <script src="script.js"></script>
+    <script src="helpers.js"></script>
   </body>
 </html>
